syntax = "proto3";

option csharp_namespace = "GrpcService";

package chat;

service ChatService {
    rpc join(User) returns (JoinResponse);
    rpc sendMsg(ChatMessage) returns (Empty);
    rpc receiveMsg(ReceiveMsgRequest) returns (stream ChatMessage);
    rpc getAllUsers(Empty) returns (stream UserList);
}

message ChatMessage {
    string from = 1;
    string msg = 2;
    string time = 3;
}

message User {
    string id = 1;
    string name = 2;
    int32 profile = 3;
}

message Empty {}

message UserList {
    repeated User users = 1;
}

message JoinResponse {
    int32 error = 1;
    string msg = 2;
}

message ReceiveMsgRequest {
    string user = 1;
    string token = 2;
}
